--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,5 +46,14 @@
                 android:name="autoStoreLocales"
                 android:value="true" />
         </service>
+
+        <!-- Firebase service -->
+        <service
+            android:name=".network.FCMService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 </manifest>
